preentrega 2 Coder JS

--- a/index.html
+++ b/index.html
@@ -10,27 +10,36 @@
 
   <body>
     <div class="envolvente">
-      <h1><span> Preentrega 1 JavaScript</span></h1>
-      <h2>Prestamos ""El Mexicano""1</h2>
+      <h1><span> Preentrega 2 JavaScript</span></h1>
+      <h2>Compu Mundo Hyper-Mega_Red</h2>
     </div>
     <section class="seccion">
       <div class="contenedor">
-        <h2>Simulador interactivo</h2>
+        <h3>Simulador interactivo</h3>
         <p>
-          Objetivos del proyecto: <br />
-          Generar un script para ingresar a un servicio de prestamos con las
-          siguientes caracteriaticas:<br />
-          1.-Ingreso con correo y contraseña (3 oportunidades).<br />
-          Al ingresar:<br />
-          (a).-Mostrar un mensaje de bienvenida al ingresar.<br />
-          (b).-Mostrar el menú de opciones<br />
-          (c).-Se podra elegir una cantidad entre $5000.00 y $20000.00<br />
-          (d).-Si el usuario no ingresa sus datos correctamente indicarle se
-          comunique con soporte para restablecer la cuenta.<br />
-          2.-El script calculará la cantidad a pagar por el prestamo que el
-          usuario decida adquirir, sumando un 25% de intereses y un 16% de
-          IVA.<br />
-          3.-Al finalizar su compra el script mostrara un mensaje de
+          Objetivos del proyecto: <br /><br />
+          Generar un script para ingresar a una tienda virtual de equipos
+          electrónicos con las siguientes caracteriaticas:<br /><br />
+          1.-Ingreso con correo y contraseña (3 oportunidades).<br /><br />
+          Al ingresar:<br /><br />
+          (a).-Mostrar un mensaje de bienvenida.<br /><br />
+          (b).-Mostrar el menú de opciones<br /><br />
+          (c).-Se podra elegir entre los productos disponibles y agregarlos al
+          carrito de compras.<br /><br />
+          (d).-Si el usuario no ingresa sus datos correctamente indicarle su
+          cuenta se ha bloqueado.<br /><br />
+          2.-El programa calculará lo siguiente:<br /><br />
+          *Cantidad a pagar sin impuestos.<br /><br />
+          *Cantidad a pagar incluyendo 16% de IVA.<br /><br />
+          3.- El programa ofrecerá al usuario la opción de elegir envío a
+          domicilio.<br /><br />
+          (a) Si el usuario elige envío a domicilio, el programa agregará un
+          costo de envío de $200.00<br /><br />
+          (b) Si el usuario decide no solicitar envío a domicilio, no se
+          aplicará este cargo.<br /><br />
+          4.- El usuario tiene la opcion de pagar su compra en mensualidades sin
+          intereses y el programa calculará el monto de los pagos mensuales.
+          5.-Al finalizar su compra el script mostrará un mensaje de
           agradecimiento.
         </p>
       </div>
